--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --mode development",
+    "start": "webpack serve --mode development --open",
     "build": "webpack --mode production"
   },
   "keywords": [],
@@ -14,8 +14,11 @@
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
+    "@svgr/core": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "node-sass": "^9.0.0",
     "path": "^0.12.7",
