--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "confilogi-task",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://AdamSkubida.github.io/Confilogi-Task",
   "scripts": {
     "start": "webpack serve --mode development --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +22,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
+    "gh-pages": "^6.1.0",
     "html-webpack-plugin": "^5.6.0",
     "node-sass": "^9.0.0",
     "path": "^0.12.7",
